# statgen

./: Cargo.toml  LICENSE  README.md
docs/: 404.html  demo.html  index.html
src/: lib.rs  main.rs
