[package]
name = "statgen"
version = "0.1.0"
edition = "2021"
authors = ["OpenCode AI <contact@opencode.ai>"]
description = "A modern static site generator that converts Markdown to beautiful HTML with advanced theming and layout options in milliseconds"
license = "MIT"
readme = "README.md"
keywords = ["markdown", "html", "static-site-generator", "cli", "ssg"]
categories = ["command-line-utilities", "text-processing", "web-programming"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
pulldown-cmark = "0.13"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.0"
